# Oat

./: .clang-format  .cleanup.sh  .gitignore  .travis.yml  CMakeLists.txt  README.md  build-oat.sh
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  README-template.md  make-README.sh
experiments/: CMakeLists.txt  deadlock_tests.sh
experiments/lib/: Node.h  SharedCVMat.h  Sink.h  Source.h
experiments/src/: CMakeLists.txt  ForwardsDecl.h  Node.h  NodeManager.h  SharedCVMat.h  SharedObject.h  Sink.h  Source.h  matclient.cpp  matserver.cpp
experiments/test/: CMakeLists.txt  Node_test.cpp  Sink_test.cpp  Source_test.cpp  concurrency_test.cpp
ext/catch/: CMakeLists.txt
ext/cpptoml/: CMakeLists.txt
ext/rapidjson/: CMakeLists.txt
shared-mem-test/: CMakeLists.txt  condvar.cpp  main.cpp  matclient.cpp  matserve.cpp  matshare.cpp
src/: .syntastic_cpp_config  CMakeLists.txt  CameraConfig.cpp  CameraConfig.h  Makefile  RatVision.cpp  SimpleTracker.cpp  SimpleTrackerConfig.h  SimpleTrackerConfig.h.in  Tracker.cpp  Tracker.h  buildall.sh  tracker-config.toml
src/Buffer/: ThreadSafeCircBuffer.cpp
src/CameraControl/: CMakeLists.txt  CameraControl.cpp  CameraControl.h  camera-config.toml  main.cpp
src/GigECamera/: CMakeLists.txt  Camera.h  CameraControl.cpp  CameraControl.h  FileReader.cpp  FileReader.h  WebCam.cpp  WebCam.h  camera-config.toml  config.toml  main.cpp
src/IPC/: SMServer.cpp  SMServer.h
src/Processors/: BackgroundSubtractor.cpp  BackgroundSubtractor.h  CMakeLists.txt  Combiner.h  Detector.cpp  Detector.h  HSVDetector.cpp  HSVDetector.h  HSVFilter.h  ImageDisplay.cpp  ImageDisplay.h  PositionMeasurement.cpp  PositionMeasurement.h
src/Tracker/: BackgroundSubtractor.cpp  BackgroundSubtractor.h  CMakeLists.txt  HSVFilter.cpp  HSVFilter.h  Tracker.cpp  Tracker.h
src/Tracker2D/: CMakeLists.txt  HSVFilter.cpp  HSVFilter.h  Tracker2D.h
src/backsubtractor/: BackgroundSubtractor.cpp  BackgroundSubtractor.h  CMakeLists.txt  main.cpp
src/buffer/: Buffer.cpp  Buffer.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  TokenBuffer.cpp  TokenBuffer.h  main.cpp
src/calibrator/: CMakeLists.txt  Calibrator.cpp  Calibrator.h  CalibratorVisitor.h  CameraCalibrator.cpp  CameraCalibrator.h  HomographyGenerator.cpp  HomographyGenerator.h  OutputVisitor.h  PathChanger.cpp  PathChanger.h  Saver.cpp  Saver.h  UsagePrinter.cpp  UsagePrinter.h  calibrate.cpp  main.cpp
src/camserv/: Camera.h  FileReader.cpp  PGGigECam.cpp  PGGigECam.h  WebCam.cpp  calibrate.cpp  config.toml  main.cpp
src/camserve/: CMakeLists.txt  Calibrator.cpp  Camera.h  FileReader.cpp  FileReader.h  PGGigECam.cpp  PGGigECam.h  WebCam.cpp  WebCam.h  main.cpp
src/cleaner/: CMakeLists.txt  main.cpp
src/controller/: CMakeLists.txt  Controller.cpp  Controller.h  InteractiveController.cpp  InteractiveController.h  main.cpp
src/decorator/: CMakeLists.txt  Decorator.cpp  Decorator.h  Recorder.cpp  Recorder.h  config.toml  main.cpp
src/detector/: CMakeLists.txt  Detector.h  Detector2D.h  DifferenceDetector.cpp  DifferenceDetector.h  DifferenceDetector2D.cpp  DifferenceDetector2D.h  HSVDetector.cpp  HSVDetector.h  HSVDetector2D.cpp  HSVDetector2D.h  config.toml  hsv_config.toml  main.cpp
src/experiments/: CMakeLists.txt  SharedCVMat.h  matclient.cpp  matserver.cpp
src/framecombiner/: CMakeLists.txt  FrameCombiner.cpp  FrameCombiner.h  MaskSubtractor.cpp  MaskSubtractor.h  config.toml  main.cpp
src/framedecorator/: Decorator.cpp  Decorator.h  main.cpp
src/framefilt/: BackgroundSubtractor.cpp  BackgroundSubtractor.h  CMakeLists.txt  FrameFilt.h  FrameFilter.h  FrameMasker.cpp  FrameMasker.h  config.toml  main.cpp
src/framefilter/: BackgroundSubtractor.cpp  BackgroundSubtractor.h  BackgroundSubtractorCUDA.cpp  BackgroundSubtractorCUDA.h  BackgroundSubtractorMOG.cpp  BackgroundSubtractorMOG.h  CMakeLists.txt  ColorConvert.cpp  ColorConvert.h  FrameFilter.cpp  FrameFilter.h  FrameFilterKernels.cu  FrameFilterKernels.h  FrameMasker.cpp  FrameMasker.h  Threshold.cpp  Threshold.h  Undistorter.cpp  Undistorter.fp  Undistorter.h  config.toml  main.cpp
src/frameserve/: CMakeLists.txt  Camera.h  FileReader.cpp  FileReader.h  PGGigECam.cpp  PGGigECam.h  WebCam.cpp  WebCam.h  calibrate.cpp  config.toml  main.cpp
src/frameserver/: CMakeLists.txt  Camera.h  FileReader.cpp  FileReader.h  FrameServer.cpp  FrameServer.h  PGGigECam.cpp  PGGigECam.h  PGUSBCam.cpp  PGUSBCam.h  PointGreyCam.cpp  PointGreyCam.h  PointGreySettings.h  TestFrame.cpp  TestFrame.h  UCLAMiniscope.cpp  UCLAMiniscope.h  WebCam.cpp  WebCam.h  calibrate.cpp  compile_commands.json  config.toml  main.cpp  stdafx.h
src/frameviewer/: CMakeLists.txt  FrameViewer.cpp  FrameViewer.h  Viewer.cpp  Viewer.h  ViewerBase.h  main.cpp
src/hsvdetector/: CMakeLists.txt  DifferenceDetector.h  HSVDetector.cpp  HSVDetector.h  main.cpp
src/mat-serve-test/: CMakeLists.txt  MatServeTest.cpp  MatServeTest.h  main.cpp
src/posicom/: CMakeLists.txt  MeanPosition2D.cpp  MeanPosition2D.h  PositionCombiner.cpp  PositionCombiner.h  main.cpp
src/posifilt/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  KalmanFilter2D.cpp  KalmanFilter2D.h  KalmanFilter3D.cpp  KalmanFilter3D.h  PositionFilter.cpp  PositionFilter.h  config.toml  main.cpp  test_file_tracker_config.toml
src/positest/: CMakeLists.txt  RandomAccel2D.cpp  RandomAccel2D.h  TestPosition.h  main.cpp
src/positioncombiner/: CMakeLists.txt  MeanPosition.cpp  MeanPosition.h  MeanPosition2D.cpp  MeanPosition2D.h  PositionCombiner.cpp  PositionCombiner.h  config.toml  main.cpp
src/positiondetector/: Aruco.cpp  Aruco.h  ArucoBoard.cpp  ArucoBoard.h  CMakeLists.txt  Detector2D.h  DetectorFunc.cpp  DetectorFunc.h  DifferenceDetector.cpp  DifferenceDetector.h  DifferenceDetector2D.cpp  DifferenceDetector2D.h  HSVDetector.cpp  HSVDetector.h  HSVDetector2D.cpp  HSVDetector2D.h  HSVDetectorCUDA.cpp  HSVDetectorCUDA.h  PositionDetector.cpp  PositionDetector.h  RPGPoseEst.cpp  RPGPoseEst.h  SimpleThreshold.cpp  SimpleThreshold.h  Tuner.cpp  Tuner.h  config.toml  main.cpp
test/: CMakeLists.txt  CTestTestfile.cmake
(+273 files in other folders)
